<resources>
    <string name="app_name">Serviced for Business</string>
    <string name="welcome_to_serviced_for_business">Welcome To Serviced For Business</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone">Phone</string>
    <string name="enter_one_time_password_sent_on">Enter a one time password sent on</string>
    <string name="resend_code">Resend code</string>
    <string name="verify_code">Verify</string>
    <string name="individual">Individual</string>
    <string name="brand">Brand</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="next">Next</string>
    <string name="brand_or_group_name">Brand or group name</string>
    <string name="categories">Service category:</string>
    <string name="txt_select">Select a category that best suits the service you offer</string>
    <string name="enter_your_skills_separated_by_a_comma">Tell us your top skills and main areas of expertise separated by a comma (,)</string>
    <string name="select_the_days_of_the_week_that_you_are_available">Select the days of the week that you are available</string>
    <string name="select_the_time_that_you_are_available">Select the time of the day that you are available</string>
    <string name="pick_time_range">Pick Time Range</string>
    <string name="always_available">Always Available</string>
    <string name="provider_description_hint">Tell customers about yourself and your career</string>
    <string name="available_countrywide">Available countrywide</string>
    <string name="txt_app_terms_1">By accessing our app, Serviced for business, you are agreeing to be bound to the terms of the service, all applicable laws and regulations , and agree that you are responsible for compliance with any applicable laws . If you do not agree with any of these terms, you are prohibited from using or accessing Serviced apps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_engagement_and_activity">Profile engagement and Activity</string>
    <string name="todo">TODO</string>
    <string name="profile_likes">Profile Likes</string>
    <string name="profile_views">Profile views</string>
    <string name="all">All</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="create_a_services_business_account">Create a services business account</string>
    <string name="work_phone_number">Work phone number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="what_do_you_identify_as">What do you identify as?</string>
    <string name="username">Username</string>
    <string name="service_category">Service Category :</string>
    <string name="select_a_category_that_best_suits_the_service_you_offer">Select a category that best suits the service you offer</string>
    <string name="about_you">About You</string>
    <string name="enter_your_profession_or_area_of_expertise">Enter your Profession or area of expertise</string>
    <string name="tell_us_your_top_skills_and_main_areas_of_expertise_separated_by_a_comma">Tell us your top skills and main areas of expertise separated by a comma (,)</string>
    <string name="tell_customers_about_yourself_and_your_career">Tell customers about yourself and your career</string>
    <string name="what_should_customers_have_ready_to_get_you_started">What should customers have ready to get you started</string>
    <string name="eg_linkedin_facebook_etc">eg. Linkedin, Facebook etc</string>
    <string name="first_url">first url</string>
    <string name="second_url">second url</string>
    <string name="link_to_social_accounts">Link to social accounts</string>
    <string name="skills_warning">Please provide at least one skill</string>
    <string name="urls_warning">Please provide at least one valid yrl</string>
    <string name="availability">Availability</string>
    <string name="how_far_are_you_willing_to_travel">How far are you willing to travel</string>
    <string name="distance_in_kilometres">Distance in kilometres</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="home">Home</string>
    <string name="jobs">Jobs</string>
    <string name="messages">Messages</string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="reviews">Reviews</string>
    <string name="average_rating">Average Rating</string>
    <string name="estimated_earnings">Estimated earnings</string>
    <string name="jobs_done">Jobs done</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="availability_status">Availability Status</string>
    <string name="suggest_feedback">Suggest Feedback</string>
    <string name="update_serviced_for_business">Update Serviced for business</string>
    <string name="help">Help</string>
    <string name="about_serviced">About Serviced</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="version">Version</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="or">Or...</string>
    <string name="no_account">No account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="a_link_will_be_sent_to_the_email_you_registered_your_account_with">A link will be sent to the email you registered your account with</string>
    <string name="reset_password">Reset password</string>
    <string name="start_typing_to_see_suggestions">Start typing to see suggestions</string>
    <string name="loading">Loading...</string>
    <string name="you_did_not_complete_your_registration">You did not complete your registration</string>
    <string name="users_will_not_be_able_to_view_your_profile">Users will not be able to view your profile</string>
    <string name="back_to_registration">back to registration</string>
    <string name="title_location_permission">Serviced Location access</string>
    <string name="text_location_permission">Serviced for business needs to access your location to link you with the closest service seekers</string>
    <string name="ok">Ok</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="start_typing">Start typing..</string>
</resources>