<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home_nav"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />

        <item
            android:id="@+id/work_nav"
            android:icon="@drawable/work_icon"
            android:title="@string/jobs" />

        <item
            android:id="@+id/msg_nav"
            android:icon="@drawable/msg_icon"
            android:title="@string/messages" />

        <item
            android:id="@+id/subscriptions_nav"
            android:icon="@drawable/subscriptions_icon"
            android:title="@string/manage_subscriptions" />

    </group>

    <item android:title="@string/profile">

        <menu>

            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/log_out"
                    android:icon="@drawable/lock_icon"
                    android:title="@string/log_out" />

            </group>

        </menu>

    </item>

    <item android:title="App">

        <menu>

            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/share_nav"
                    android:icon="@drawable/share_icon"
                    android:title="Share" />

                <item
                    android:id="@+id/rate_nav"
                    android:icon="@drawable/rate_us"
                    android:title="Rate us" />

                <item
                    android:id="@+id/contact_dev_nav"
                    android:icon="@drawable/email_icon"
                    android:title="Contact developer" />

            </group>

        </menu>

    </item>

</menu>