<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.gachugusville.servicedforbusiness.Registration.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/log_in_back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/arrow_back"
            app:tint="@color/light_blue"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/crimson_text"
            android:text="Welcome \n Back"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/purple_700"
            android:textSize="50sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/crimson_text"
            android:text="@string/log_in_to_your_account"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/mail_logIn_field"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_white_edit_text"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="12dp"
            android:drawableTint="@color/light_blue"
            android:fontFamily="@font/crimson_text"
            android:hint="E mail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="Autofill,HardcodedText" />

        <TextView
            android:id="@+id/txt_email_login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/red" />


        <EditText
            android:id="@+id/password_logIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_white_edit_text"
            android:drawableStart="@drawable/phone_icon"
            android:drawablePadding="12dp"
            android:drawableTint="@color/light_blue"
            android:fontFamily="@font/crimson_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/txt_password_login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/txt_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/crimson_text"
            android:text="@string/forgot_password"
            android:textColor="@color/red"
            android:textSize="18sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logIn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/light_blue"
            android:fontFamily="@string/sans_serif"
            android:text="@string/log_in"
            app:cornerRadius="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/crimson_text"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_googleSignUp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@string/sans_serif"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            app:cornerRadius="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/crimson_text"
                android:text="@string/no_account"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/crimson_text"
                android:text="@string/sign_up"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>